--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script>
       // audio init
       console.log(
-        `Welcome to doughbeat, a very minimal bytecoding editor..
+        `Welcome to doughbeat, a very minimal bytebeat livecoding editor..
   
 Click into the page and press ctrl+enter to evaluate the code!
   
