--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <body style="margin: 0; padding: 0; height: 100%; width: 100%; display: flex">
     <textarea
       id="code"
+      spellcheck="false"
       style="
         width: 100%;
         font-size: 24px;
