--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ registerProcessor('${name}', MyProcessor);
       const initialCode =
         urlCode ||
         `function dsp(t) {
-  return (110*t%1)/10
+  return (110 * t % 1 - 0.5) / 10
 }`;
       input.value = initialCode;
 
